# coding.agent

./: .gitignore  ARCHITECTURE_FIX_SUMMARY.md  AUDIO_DEBUGGING_ENHANCED.md  AUTONOMOUS_TESTING_SUMMARY.md  AUTONOMOUS_WORK_SUMMARY.md  CALL_ID_PORT_MAPPING_FIX.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPILATION_WARNINGS_FIXED.md  CONNECTION_TIMING_FIX_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DEBUGGING_SUMMARY.md  FIXES_APPLIED.md  HARVARD_TEST_ANALYSIS.md  KOKORO.md  KOKORO_COMPLETE.md  KOKORO_FIX.md  KOKORO_INTEGRATION.md  KOKORO_MODELS_DOWNLOADED.md  KOKORO_SERVICE_REPAIR_SUMMARY.md  LLAMA_LATENCY_OPTIMIZATION.md  MULTI_CALL_FIX_BLOCKING_CONNECT.md  OUTBOUND_AUDIO_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE2_CODE_CHANGES.md  PHASE2_CODE_QUALITY_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_FINAL_SUMMARY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_QUICK_REFERENCE.md  PHASE4_INFERENCE_OPTIMIZATION_COMPLETE.md  PHASE5_AND_PHASE6_SUMMARY.md  PHASE5_ITERATIVE_TESTING_COMPLETE.md  PHASE6_INCREMENTAL_EXPANSION_COMPLETE.md  PHASE8_FINAL_DOCUMENTATION.md  PIPELINE_ANALYSIS.md  (+134 more)
.github/workflows/: build.yml
.zencoder/rules/: build.md  database.md  inbound-audio-processor.md  kokoro-service.md  llama-service.md  outbound-audio-processor.md  repo.md  sip-client.md  tts-service.md  vad-service.md  whisper-service.md
Testfiles/: llama_prompts.json  sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt  sample_10.txt  sample_11.txt  sample_12.txt  sample_13.txt  sample_14.txt  sample_15.txt  sample_16.txt  sample_17.txt  sample_18.txt  sample_19.txt  sample_20.txt  sample_en_01.txt
build_test/: CTestTestfile.cmake  test_integration[1]_include.cmake  test_integration[1]_tests.cmake  test_interconnect[1]_include.cmake  test_interconnect[1]_tests.cmake  test_sanity[1]_include.cmake  test_sanity[1]_tests.cmake  test_sip_provider_unit[1]_include.cmake  test_sip_provider_unit[1]_tests.cmake
data/moshi_german/: train_local.jsonl
docs/: frontend-architecture.md  frontend-guide.md  tomedo-crawl.md
libpiper/: CMakeLists.txt
libpiper/src/: piper.cpp  piper_impl.hpp
llama-service.dSYM/Contents/: Info.plist
mfa_temp/ep001_corpus/: episode_001.txt
mfa_temp/ep002_corpus/: episode_002.txt
mfa_temp/ep003_corpus/: episode_003.txt
mfa_temp/ep004_corpus/: episode_004.txt
moshi-rag/rust/: Cargo.toml  README.md
moshi-rag/rust/mimi-pyo3/: Cargo.toml
moshi-rag/rust/moshi-backend/: Cargo.toml  config-q8-norag.json  config-q8.json  config.json
moshi-rag/rust/moshi-backend/src/: backend_ws.rs  batched_channels.rs  benchmark.rs  cmd_port.rs  interconnect.rs  log_forwarder.rs  main.rs  pcm_vad.rs  prodigy_bridge.rs  rag_manager.rs  rag_retrieval.rs  rag_two_step.rs  session_feedback.rs  standalone.rs  stream_both.rs  turn_manager.rs  utils.rs  whisper_receiver.rs
moshi-rag/rust/moshi-cli/: Cargo.toml
moshi-rag/rust/moshi-core/src/: asr.rs  batched_lm_generate_multistream.rs  batched_transformer.rs  lm.rs  mimi.rs  nn.rs  transformer.rs
moshi-rag/rust/moshi-rag-backend/: Cargo.toml  config.json
moshi-rag/rust/moshi-rag-backend/src/: action.rs  config.rs  main.rs  prompts.rs  retrieval.rs  server.rs  text_stream.rs  tomedo_client.rs
moshi-rag/rust/moshi-server/: Cargo.toml
patches/: moshi-rust-metal-fixes.patch
scripts/: 10_EPISODES_V3_PROCESSING_RESULTS.md  10_EPISODE_VERIFICATION_RESULTS.md  ALIGNMENT_ALGORITHM_ANALYSIS.md  AUDIT_verify_podcasts.md  CHUNK_COUNT_VERIFICATION_UPDATE.md  COREML_WHISPER_OPTIONS.md  CRITICAL_ANALYSIS_MFA_FAILURE.md  CURRENT_STATUS_2026-06-19.md  EPISODE_152_TEST_RESULTS.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_MPS_FINDINGS.md  FINAL_ROOT_CAUSE_AND_FIX.md  FINAL_VERIFICATION_RESULTS.md  FINDINGS_verify_podcasts.md  HIGH_WER_ANALYSIS.md  INSTALL_WHISPERX.md  MFA_10_EPISODES_FINAL_STATUS.md  MFA_VALIDATION_RESULTS.md  MLX_WHISPER_TEST_RESULTS.md  PODCAST_ALIGNMENT.md  PREPARATION_SCRIPT_BUGS_IDENTIFIED.md  PREP_SCRIPT_ANALYSIS_AND_FIX.md  TIMESTAMP_ADJUSTMENT_ISSUE_ANALYSIS.md  TIMESTAMP_ANALYSIS_ep150_0023.md  TRANSCRIPT_DIRECTORY_ANALYSIS.md  V3_VS_V4_EPISODE_153_COMPARISON.md  V4_EPISODE_153_TEST_RESULTS.md  V4_SCRIPT_AUDIT.md  VALIDATION_IN_PROGRESS_SUMMARY.md  VALIDATION_PROGRESS_SUMMARY.md  VERIFY_PODCASTS_AUDIT.md  WAVEFORM_ALIGNMENT_FIX.md  WAVEFORM_ALIGNMENT_FIX_COMPLETE.md  WAVEFORM_ALIGNMENT_IMPLEMENTATION.md  WAVEFORM_ALIGNMENT_RESEARCH_AND_UPGRADES.md  WHISPERX_ALIGNMENT_INSIGHT.md  WHISPERX_APPLE_SILICON_ALTERNATIVES.md  WHISPERX_MPS_LIMITATION.md  WHISPERX_VALIDATION_ANALYSIS.md  WHISPERX_VALIDATION_COMPLETE.md  (+96 more)
test-results/: final_kokoro_20260331_023155.json  final_neutts_20260331_023329.json  loopback_accumulation_fix_20260402.json  loopback_kokoro_20260331_022137.json  loopback_kokoro_20260331_154018.json  loopback_kokoro_20260402_015931.json  loopback_neutts_20260331_022418.json  loopback_neutts_20260331_154310.json  loopback_neutts_20260402_020208.json  loopback_neutts_normalized_20260331_022857.json  loopback_test_20260330_1222.json  loopback_test_20260330_1230.json  loopback_test_20260330_conservative_sampling.json  loopback_test_20260330_vad_700ms.json  tts_verification_20260418_052207.json
tests/: README_test_sip_provider.md  check_iap_logs.py  check_moshi_logs.py  check_moshi_startup_logs.py  check_test_results.py  multi_call_test.py  phase_1_2_verification.md  pipeline_loop_sim.cpp  piper_concurrency_test.py  piper_load_test.py  query_db_via_ui.py  run_pipeline_test.py  run_pw_wer_test.py  run_stage7.py  test_call_lifecycle.py  test_control_sockets.sh  test_integration.cpp  test_interconnect.cpp  test_kokoro_cpp.cpp  test_llama_german.py  test_multi_call_vad.py  test_sanity.cpp  test_sip_provider.cpp  test_sip_provider_unit.cpp  tts_outbound_sim.cpp  view_moshi_logs.py  whisper_inbound_sim.cpp
whisper-cpp/: CMakeLists.txt
whisper-cpp-build-bak/: .ninja_deps  .ninja_log  build.ninja  whisper-config.cmake
(+79 files in other folders)
